Check what if...

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         <button type="button" data-task-edit-button class="datatable__button">Edit</button>
         <button type="button" data-task-delete-button class="datatable__button">Delete</button>
       </fieldset>
-
+    </div>
+    <div class="datatable__row-section-wrapper">
       <fieldset class="datatable__row-section datatable__row-section--trello-section">
         <select class="datatable__select" name="board-name" data-board-name-select>
           <option disabled selected>--- select an board ---</option>
